New in svn version:

  * SCAN functional with libxc v.3; bands with meta-GGA can be computed
   (Davide Ceresoli)

Fixed in svn version

  * EXX in noncolinear/spin-orbit case wasn't correct (r13453)

  * Fixed a small bug in two subroutines only called by Environ (r13451)

  * Out-of-bounds error in hybrid functionals with LSDA, Gamma tricks and
    2 pools (r13448)

  * EPW: in v.6.1 there was a mismatch between symmetry operations in PW
    and in EPW. It affected results of v.6.1 only in the presence of
    fractional translations incommensurate with the FFT grid. (r13443)

  * FFTXlib: the case in which the smooth and dense grids have the same FFT
    dimensions along x and y but different along z was incorrectly treated,
    leading to strange error messages. (r13439 and r13445)

  * There was a small inconsistency in the vdW-DF kernel generating routine
    "generate_vdW_kernel_table.f90", not affecting in any significant way 
    the results. It is anyway recommended to re-generate the kernel file.
    Thanks to C.Y. Ren for noticing this. (r13438)

Incompatible changes in svn version:

  * module pwcom no longer contains modules gvect, gvecs
  * The new xml format with schema is now the default. Use configure option
    "--disable-xml", or add -D__OLDXML to MANUAL_FLAGS in make.inc, to revert
    to the old xml format
  * Hybrid functionals: ACE is now the default for scf calculations (it wasn't
    in 6.1 contrary to what previously stated in this file); it is disabled
    for TD-DFPT. See variable "use_ace".

New in 6.1 version:

  * Hybrid functionals: Band parallelization over pair of bands, contributed
    by Taylor Barnes et al, http://dx.doi.org/10.1016/j.cpc.2017.01.008
  * Hybrid functionals with PAW now work
  * Optimized tetrahedron method, contributed by Mitsuaki Kawamura, U. Tokyo
  * PostProcessing: pp.x can now plot many bands in a single run.
    Contributed by Leopold Talirz, U. York

Incompatible changes in 6.1 version:
